Pass around BackgroundFetch options as mojom type.

CL https://chromium-review.googlesource.com/c/chromium/src/+/956183
caused a few tests to be flaky, which was due to the garbage collector
getting rid of BackgroundFetchOptions from under us.

This change creates a copy of background fetch options early on,
converting them from blink::BackgroundFetchOptions to
mojom::blink::BackgroundFetchRegistrationPtr. This copy is not going to
be deleted by the GC, hence ensuring accurate data later on in the
processing of the fetch.

Bug: 822276
Change-Id: Iaab780b18182372cf607b57eb15815c852d4595a
Reviewed-on: https://chromium-review.googlesource.com/977909
Commit-Queue: Mugdha Lakhani <nator@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545805}
Former-commit-id: b1a8b203ae9c854f97d0750591a118f52e6f84a4