third_party/WebKit/Source/modules/background_fetch/BackgroundFetchIconLoader.h
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/loader/ThreadableLoader.h"
 #include "core/loader/ThreadableLoaderClient.h"
 #include "modules/ModulesExport.h"
+#include "modules/background_fetch/BackgroundFetchTypeConverters.h"
 #include "platform/SharedBuffer.h"
 #include "third_party/skia/include/core/SkBitmap.h"
 
@@ -35,9 +36,7 @@ class MODULES_EXPORT BackgroundFetchIconLoader final
 
   // Asynchronously download an icon from the given url, decodes the loaded
   // data, and passes the bitmap to the given callback.
-  void Start(ExecutionContext*,
-             const HeapVector<IconDefinition>&,
-             IconCallback);
+  void Start(ExecutionContext*, HeapVector<IconDefinition>, IconCallback);
 
   // Cancels the pending load, if there is one. The |icon_callback_| will not
   // be run.
@@ -50,7 +49,10 @@ class MODULES_EXPORT BackgroundFetchIconLoader final
   void DidFail(const ResourceError&) override;
   void DidFailRedirectCheck() override;
 
-  void Trace(blink::Visitor* visitor) { visitor->Trace(threadable_loader_); }
+  void Trace(blink::Visitor* visitor) {
+    visitor->Trace(threadable_loader_);
+    visitor->Trace(icons_);
+  }
 
  private:
   void RunCallbackWithEmptyBitmap();
@@ -58,6 +60,7 @@ class MODULES_EXPORT BackgroundFetchIconLoader final
   bool stopped_ = false;
   scoped_refptr<SharedBuffer> data_;
   IconCallback icon_callback_;
+  HeapVector<IconDefinition> icons_;
   Member<ThreadableLoader> threadable_loader_;
 };
 
